# spotify

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PLAN.md  README.md  SECURITY.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  org-ci-tests.yml  org-codeql.yml  org-precommit.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_curation_notifications.py
docs/research/: spotifyforge-prd-research.md
spotifyforge/: __init__.py  config.py  logging_config.py  security.py
spotifyforge/auth/: oauth.py
spotifyforge/cli/: app.py
spotifyforge/core/: circuit_breaker.py  curation_engine.py  discovery.py  notifications.py  playlist_manager.py  playlists.py  recommender.py  retry.py  scheduler.py
spotifyforge/db/: engine.py  repositories.py
spotifyforge/models/: models.py
spotifyforge/web/: app.py  deps.py  routes.py  websocket.py
tests/test_cli/: test_app.py
tests/test_core/: test_circuit_breaker.py  test_curation_engine.py  test_discovery.py  test_logging_config.py  test_notifications.py  test_playlist_manager.py  test_recommender.py  test_retry.py
tests/test_db/: test_repositories.py
tests/test_models/: test_models.py
tests/test_web/: test_routes.py
