[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotifyforge"
version = "0.1.0"
description = "The all-in-one platform for serious Spotify playlist curators"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "tekore>=5.0,<7.0",
    "sqlmodel>=0.0.14",
    "typer[all]>=0.12",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "keyring>=25.0",
    "cryptography>=42.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
nicegui = [
    "nicegui>=1.4",
]

[project.scripts]
spotifyforge = "spotifyforge.cli.app:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
